Fix heigh issues on smaller screens

--- a/uniProject/uniProject/static/css/styles.css
+++ b/uniProject/uniProject/static/css/styles.css
@@ -290,7 +290,7 @@ h1, h2 {
                         "main" auto
                         "footer" auto;
 
-                grid-template-rows: auto auto 43vh auto;
+                grid-template-rows: auto auto auto auto;
         }
 
 	ul {
